// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-v7ox1c-StyledBox {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-v7ox1c-StyledBox .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-1mqd73s-Term {
  font-weight: 500;
  color: #151a2d;
}

.cache-1mqd73s-Term:after {
  content: ':';
}

.cache-63i55g-Desc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-v7ox1c-StyledBox"
  >
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-7xcbwr-StyledBox-StyledBox {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-7xcbwr-StyledBox-StyledBox .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-7xcbwr-StyledBox-StyledBox>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-7xcbwr-StyledBox-StyledBox>.eu9mc5y1 {
  margin-top: 0;
}

.cache-7xcbwr-StyledBox-StyledBox .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-1mqd73s-Term {
  font-weight: 500;
  color: #151a2d;
}

.cache-1mqd73s-Term:after {
  content: ':';
}

.cache-63i55g-Desc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-7xcbwr-StyledBox-StyledBox"
  >
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-1pnahs1-StyledBox-StyledBox-StyledBox {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox>.eu9mc5y1 {
  margin-top: 0;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox>.eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-1pnahs1-StyledBox-StyledBox-StyledBox>.eu9mc5y1::selection {
  color: #ffffff;
  background: #4f0599;
}

.cache-1mqd73s-Term {
  font-weight: 500;
  color: #151a2d;
}

.cache-1mqd73s-Term:after {
  content: ':';
}

.cache-63i55g-Desc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-1pnahs1-StyledBox-StyledBox-StyledBox"
  >
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-1mqd73s-Term"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-63i55g-Desc"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
